# cmake-superbuild-ninja-bug

./: CMakeLists.txt  README.md
bar/: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt
foo/src/: foo.cpp
